# qudit-sim

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  amplitude_scan.ipynb  demo.ipynb  paulis.py  pulse_sim.py  pyproject.toml  qubit_cr_eff_hamiltonian.ipynb  qubit_cr_hamiltonian.ipynb  requirements.txt  setup.cfg  validation.ipynb
docs/: requirements.txt
docs/source/: api.rst  conf.py  gates.rst  hamiltonian.rst  heff.rst  index.rst
docs/source/apidocs/: apps.rst  backend.rst  frontend.rst  hamiltonian.rst  heff.rst  misc.rst  qudit_sim.rst  simulation.rst  visualization.rst
examples/: amplitude_scan.ipynb  cross_resonance.ipynb  demo.ipynb  novel_techniques.ipynb  pi_pulse.ipynb  rotary_echo_cr.ipynb  validation.ipynb
examples/validation/: drive.ipynb  hamiltonian.ipynb  heff.ipynb  sim.ipynb
qudit_sim/: __init__.py  analysis.py  basis.py  config.py  drive.py  expression.py  find_heff.py  frame.py  gate.py  hamiltonian.py  hamiltonian_utils.py  heff_tools.py  inspection.py  maximize_fidelity.py  parallel.py  paulis.py  pulse.py  pulse_sequence.py  pulse_sim.py  qudit_heff.py  scale.py  sim_result.py  time_function.py  unitary.py  util.py  utils.py
qudit_sim/analysis/: __init__.py  calibration.py  decompositions.py  hamiltonian.py  heff.py
qudit_sim/apps/: __init__.py  find_heff.py  heff_tools.py
qudit_sim/apps/gates/: __init__.py  components.py  pi_pulse.py
qudit_sim/heff/: __init__.py  analysis.py  common.py  fidelity_maximization.py  inspection.py  iterative_fit.py  leastsq_minimization.py  maximize_fidelity.py  visualize.py
qudit_sim/visualization/: __init__.py  decompositions.py  hamiltonian.py  heff.py
(+6 files in other folders)
