[build-system]
requires = [
    "flit_core >=3.2,<4",
    "oldest-supported-numpy",
    "scipy",
    "qutip",
    "h5py",
    "jax",
    "optax"
]
build-backend = "flit_core.buildapi"

[project]
name = "qudit_sim"
authors = [{name = "Yutaro Iiyama", email = "iiyama@icepp.s.u-tokyo.ac.jp"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
