[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "qudit_sim"
authors = [{name = "Yutaro Iiyama", email = "iiyama@icepp.s.u-tokyo.ac.jp"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
