[metadata]
name = qudit-sim
version = 0.2.0
author = Yutaro Iiyama
author_email = iiyama@icepp.s.u-tokyo.ac.jp
description = Multi-qudit system simulation and analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UTokyo-ICEPP/qudit-sim
project_urls =
    Bug Tracker = https://github.com/UTokyo-ICEPP/qudit-sim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy
    qutip
    h5py
    jax
    optax
    scipy
    matplotlib
    rqutils >=0.1.4

[options.packages.find]
include = qudit_sim*
